--- a/exercicio3-html/style.css
+++ b/exercicio3-html/style.css
@@ -1,14 +1,85 @@
 body {
     background-color: #f1faf1;
 }
+.div-tudo {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.fieldset-dados{
+    width: 90%;
+    height: 100%;
+}
+
+.fieldset-localizacao{
+    width: 90%;
+    height: 100%;
+}
 
 .borda {
     border-style: groove;
-    color-backgrand 
+    
 }
 
+fieldset{
+    width: 100%;
+}
+
+.div-dados{
+    width: 48%;
+    height: 100px;
+    margin-bottom: 20px;
+}
+
+.div-loca{
+    width: 48%;
+    height: 100px;
+    margin-bottom: 20px;
+    }
+
+.div-faixa{
+    width: 100%;
+    height: 100px;
+    margin-top: 10px;
+    margin-bottom: 1px;
+    margin-left: 2%;
+    margin-right: 82px;
+    
+}
+
+.div-esporte{
+    width: 100%;
+    height: 100%;
+    margin-bottom: 20px;
+    margin-left: 2%;
+    margin-right: 82px;
+}
+
+.div-comen{
+    width: 100%;
+    height: 100%;
+    margin-bottom: 20px;
+    margin-left: 2%;
+    margin-right: 82px;
+}
+
+.div-men{
+    width: 100%;
+    height: 100%;
+    margin-bottom: 20px;
+    margin-left: 2%;
+    margin-right: 82px;
+}
+
+.div-button{
+    width: 100%;
+}
+
+
 legend {
-    border-color: #b2f1b2; 
+    color: #009900;
 }
 
 legend.verde {
